test/operator/add_nil_nil.lox
null + null // error: binary operation only allowed between ints or floats
